syntax = "proto3";

option go_package = "github.com/theothertomelliott/tic-tac-toeverengineered/grid/pkg/grid/rpcgrid";

message Position {
    int32 x = 1;
    int32 y = 2;
}

message MarkRequest {
    string game_id = 1;
    Position position = 2;
}

message MarkResponse {
    string mark = 1;
    bool has_mark = 2; 
}

message SetMarkRequest {
    string game_id = 1;
    Position position = 2;
    string mark = 3;
}

message SetMarkResponse {}

message Row {
    repeated Position position = 1;
}

message RowsRequest {}
message RowsResponse {
    repeated Row row = 1;
}

service Grid {
    rpc Mark(MarkRequest) returns (MarkResponse) {}
    rpc SetMark(SetMarkRequest) returns (SetMarkResponse) {}
    rpc Rows(RowsRequest) returns (RowsResponse) {}
}