syntax = "proto3";

option go_package = "github.com/theothertomelliott/tic-tac-toverengineered/services/grid/pkg/grid/rpcgrid";

message Position {
    int32 x = 1;
    int32 y = 2;
}

message MarkAtPositionRequest {
    string game_id = 1;
    Position position = 2;
}

message MarkAtPositionResponse {
    string mark = 1;
    bool has_mark = 2; 
}

message StateRequest {
    string game_id = 1;
}

message StateResponse {
    repeated RowState row_state = 1;
}
message RowState {
    repeated MarkAtPositionResponse mark = 1;
}

message SetMarkAtPositionRequest {
    string game_id = 1;
    Position position = 2;
    string mark = 3;
}

message SetMarkAtPositionResponse {}

message Row {
    repeated Position position = 1;
}

message RowsRequest {}
message RowsResponse {
    repeated Row row = 1;
}

service Grid {
    rpc MarkAtPosition(MarkAtPositionRequest) returns (MarkAtPositionResponse) {}
    rpc State(StateRequest) returns (StateResponse) {}
    rpc SetMarkAtPosition(SetMarkAtPositionRequest) returns (SetMarkAtPositionResponse) {}
    rpc Rows(RowsRequest) returns (RowsResponse) {}
}